--- a/challenges/15_flask_test_deploy/playbook_deploy.yaml
+++ b/challenges/15_flask_test_deploy/playbook_deploy.yaml
@@ -9,6 +9,9 @@
     webapps_dir: /deploy
 
   tasks:
+    - name: update cache
+      apt: name=python-software-properties state=present update_cache=yes cahce_valid_time=43200
+
     - name: git pull project
       git: repo={{repo_url}} dest={{webapps_dir}} version=main
 
