--- a/challenges/16_ansible_docker/Dockerfile
+++ b/challenges/16_ansible_docker/Dockerfile
@@ -1,8 +1,9 @@
-FROM ubuntu:latest
+FROM ubuntu:18.04
 
-RUN apt-get update
+RUN apt-get update -y 
 RUN apt-get install -y apache2
-RUN mkdir -p /var/lock/apache2
-RUN mkdir -p /var/run/apache2
-
-ENV APACHE
+RUN a2enmod rewrite
+RUN sed -i 's/^Listen 80/Listen 8081/' /etc/apache2/ports.conf
+RUN sed -i 's/^<VirtualHost \*:80>/<VirtualHost *:8081>/' /etc/apache2/sites-available/000-default.conf
+EXPOSE 8081
+CMD apachectl -D FOREGROUND
