--- a/challenges/15_flask_ansible/playbook_deploy.yaml
+++ b/challenges/15_flask_ansible/playbook_deploy.yaml
@@ -13,14 +13,14 @@
     - name: update git
       apt: name=git state=present update_cache=yes cache_valid_time=43200
 
-    - name: git pull project
+    - name: git pull project # pull project from github
       git: repo={{repo_url}} dest={{webapps_dir}} version=main
 
     - pip: 
         chdir: /deploy/challenges/15_flask_ansible
-        requirements: requirements.txt
+        requirements: requirements.txt # pip install req.txt
 
-    - name: run app
+    - name: run app # run the flask login page app
       command:
         chdir: /deploy/challenges/15_flask_ansible/app
         cmd: python3 app.py &
